--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-background-color: #0d112d;
+  background-color: #1934ff;
 }
 ul{
   list-style: none;
