--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,28 +1,18 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0d112d;
-    --foreground: #ededed;
-  }
-}
+
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #1934ff;
+
 }
 ul{
   list-style: none;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: #0d112d;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -63,7 +53,7 @@ a {
   flex-wrap: wrap;
 }
 .hero-section .texts {
-  width: 65%;
+  width: 60%;
 }
 .hero-section .texts h1{
   font-size: 60px;
@@ -278,9 +268,9 @@ a {
     width: 100%;
   }
   .blogs-section .blogs-cards{
-    gap: 10px;
+    gap: 5px;
   }
   .blogs-section .blogs-cards .card{
-    width: 48%;
+    width: 100%;
   }
 }
