--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -211,44 +211,75 @@ a {
 }
 
 .blogs-section .blogs-cards .card{
-  margin-top: 20px;
+
   width: 45%;
   height: fit-content;
   background-image: linear-gradient(to bottom ,#22222200,#3e3e3ecb,#2d2d2d );
-  border: 1px rgba(128, 128, 128, 0.49) solid;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 7px;
   padding: 5px;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
+  gap: 10px;
   position: relative;
 
   }
 .blogs-section .blogs-cards .card .image-blog{
-  width: 100%;
-  height: auto;
-  border-radius: 7px;
+  width: 25%;
+  margin: auto 0;
   background-color: #0098af;
+  height: 100%;
+  border-radius: 7px;
 }
 .blogs-section .blogs-cards .card .image-blog img{
   width: 100%;
   height: 100%;
+  /* opacity: 0; */
+
   border-radius: 7px;
 }
 .blogs-section .blogs-cards .card  .blog-text{
-  z-index: 1;
+  width: 73%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  /* justify-content: space-between; */
+  /* z-index: 1; */
   padding: 5px;
 }
-.blogs-section .blogs-cards .card h3{
+.blogs-section .blogs-cards .card  .blog-text h3{
   text-transform: capitalize;
   color: white;
 }
-.blogs-section .blogs-cards .card p{
+.blogs-section .blogs-cards .card  .blog-text p{
   font-size: 14px;
   color: #a3a3a3;
   
 }
-.blogs-section .blogs-cards .card button{
+.blogs-section .blogs-cards .card .blog-info{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+}
+.divider{
+  width: 100%;
+  height: 1px;
+  background-color: rgba(61, 61, 61, 0.693);
+}
+.blogs-section .blogs-cards .card .blog-info div{
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  color: gray;
+  font-size: 14px;
+  cursor: pointer;
+}
+.blogs-section .blogs-cards .card .btn-more{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
   outline: none;
   border: none;
   border-radius: 20px;
@@ -261,6 +292,9 @@ a {
   font-weight: bold;
   cursor: pointer;
   
+}
+.blogs-section .blogs-cards .card .btn-more p{
+  color: white;
 }
 
 @media (max-width:768px) {
