--- a/src/app/component/navbar/navbar.css
+++ b/src/app/component/navbar/navbar.css
@@ -7,15 +7,19 @@ background-image: linear-gradient(to right ,#4d4d4d86,#2a2a2a2b);
   width: 100%;
   height: 80px;
   padding: 0px 20px;
+  transition: .2s linear all;
 
 }
 
 nav .nav-menu{
   display: flex;
   gap: 50px;
+  align-items: center;
 }
 nav .nav-menu li a{
   text-transform: capitalize;
+  color: rgb(222, 220, 220);
+  font-size: 16px;
 
 }
 
@@ -29,11 +33,54 @@ nav .login button{
  text-transform: capitalize;
  font-weight: bold;
 }
-
+nav .nav-icon svg{
+font-size: 25px;
+}
+.close{
+  color: rgb(207, 42, 67);
+  background-color:white ;
+  border-radius: 50%;
+}
+.active-icon{
+  display: none;
+}
 /* nav bar media query */
 @media (max-width:768px) {
+  nav{
+    padding: 5px;
+  }
+  .active-icon{
+    display: block;
+  }
+  nav.active{
+    /* width: 50%; */
+    height: 100vh;
+    z-index: 900;
+    position: absolute;
+    background-color: #131313f1;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 50px;
+    
+  }
   nav .nav-menu{
+    display: none;
+  }
+  nav.active .nav-brand{
+    align-self: flex-start;
+  }
+  
+  nav.active .nav-menu{
     gap: 20px;
+    flex-direction: column;
+    display: flex;
+  }
+  nav .login button{
+    display: none;
+  }
+  nav.active .login button{
+    display: block;
   }
   
 }
