--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,13 @@ a {
 .hero-section .texts h1 span{
   all: unset; 
 }
+.hero-section .texts .links a{
+  width: 100%;
+  height: 34px;
+  background-color: #7418ff;
+  color: white;
+  font-size: 20px;
+}
 .hero-section .texts p{
   color: gray;
   font-size: 20px;
