--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,6 +78,8 @@ a {
   background-color: #7418ff;
   color: white;
   font-size: 20px;
+  display: block;
+  margin: 10px;
 }
 .hero-section .texts p{
   color: gray;
