--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,11 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "Poppins", serif;
 
 }
 ul{
@@ -226,39 +227,34 @@ a {
 }
 
 .blogs-section .blogs-cards .card{
-
-  width: 45%;
+  width: 25%;
   height: fit-content;
-  background-image: linear-gradient(to bottom ,#22222200,#3e3e3ecb,#2d2d2d );
+  /* background-image: linear-gradient(to bottom ,#22222200,#3e3e3ecb,#2d2d2d ); */
   border: 1px rgba(128, 128, 128, 0.173) solid;
   border-radius: 7px;
   padding: 5px;
-  display: flex;
-  gap: 10px;
   position: relative;
+  display: flex;
+flex-direction: column;
+gap: 5px;
 
   }
 .blogs-section .blogs-cards .card .image-blog{
-  width: 25%;
-  margin: auto 0;
-  background-color: #0098af;
+  width: 100%;
+  margin: auto ;
   height: auto;
   border-radius: 7px;
 }
 .blogs-section .blogs-cards .card .image-blog img{
   width: 100%;
   height: 100%;
-  /* opacity: 0; */
-
   border-radius: 7px;
 }
 .blogs-section .blogs-cards .card  .blog-text{
-  width: 73%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  /* justify-content: space-between; */
-  /* z-index: 1; */
+  gap: 10px;
   padding: 5px;
 }
 .blogs-section .blogs-cards .card  .blog-text h3{
@@ -274,7 +270,7 @@ a {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   gap: 10px;
 }
 .divider{
@@ -297,8 +293,8 @@ a {
   gap: 5px;
   outline: none;
   border: none;
-  border-radius: 20px;
-  width: 150px;
+  border-radius: 6px;
+  width: 100%;
   height: 35px;
   padding: 5px 10px;
   background: linear-gradient(to right, #7418ff,#dcc6fd  );
