add add blog page and course enhancemant

--- a/src/app/pages/courses/courses.css
+++ b/src/app/pages/courses/courses.css
@@ -187,8 +187,8 @@ background-image: linear-gradient(to right ,#4d4d4d86,#2a2a2a2b);
   color: white;
 }
 .courses-cards .card .info p{
-  font-size: 14px;
-  color: #7418ff;
+  font-size: 12px;
+  color: #3470fc;
   
 }
 .courses-cards .card  .price p{
