--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -213,8 +213,12 @@ a {
   font-size: 16px;
   width: 50%;
   margin: auto;
+  
 }
-
+.platform-features .features-cards  img{
+  position: relative;
+  margin-top: 60px;
+}
 /* blog section to display our blogs */
 .blogs-section {
   margin-top: 40px;
@@ -336,7 +340,7 @@ gap: 5px;
     gap: 5px;
   }
   .blogs-section .blogs-cards .card{
-    width: 70%;
+    width: 80%;
     margin: auto;
   }
 }
@@ -349,8 +353,8 @@ gap: 5px;
 
 }
 
-/* @media (max-width:600px){
+@media (max-width:600px){
   .blogs-section .blogs-cards .card{
-    width: 48%;
+    width: 85%;
   }
-} */
+}
