--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,7 @@ a {
 }
 .hero-section {
   display: flex;
+  align-items: baseline;
   gap: 20px;
   flex-wrap: wrap;
 }
@@ -258,7 +259,7 @@ gap: 5px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
   padding: 5px;
 }
 .blogs-section .blogs-cards .card  .blog-text h3{
@@ -275,7 +276,13 @@ gap: 5px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
+  gap: 5px;
+}
+.blogs-section .blogs-cards .card .blog-info div span{
+  font-size: 12px;
+}
+.blogs-section .blogs-cards .card .blog-info div svg{
+  font-size: 12px;
 }
 .divider{
   width: 100%;
@@ -340,7 +347,7 @@ gap: 5px;
     gap: 5px;
   }
   .blogs-section .blogs-cards .card{
-    width: 80%;
+    width: 90%;
     margin: auto;
   }
 }
@@ -355,6 +362,6 @@ gap: 5px;
 
 @media (max-width:600px){
   .blogs-section .blogs-cards .card{
-    width: 85%;
+    width: 90%;
   }
 }
