--- a/src/app/pages/admin/addBlog/addblog.css
+++ b/src/app/pages/admin/addBlog/addblog.css
@@ -6,10 +6,13 @@
   gap: 50px;
 }
 .blog-form-section h1{
-  position: relative;
-  /* background-color: #0098af; */
-  /* filter: blur(1px); */
+  text-transform: capitalize;
+  background: linear-gradient(90deg, #7418ff, #0098af 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 0 4px 86px #0098af;
 }
+
 .blog-form-section h1::before{
   content: " ";
   position: absolute;
@@ -37,7 +40,7 @@ form{
   width: 80%;
   height: auto;
   border: 1px solid rgba(128, 128, 128, 0.568);
-  background-color: rgb(5, 5, 57);
+
   display: flex;
   flex-direction: column;
   gap: 50px;
@@ -52,6 +55,7 @@ form div{
 form div label{
   text-transform: capitalize;
   color: white;
+  cursor: pointer;
 }
 form div input{
   width: 100%;
@@ -62,6 +66,7 @@ form div input{
   border: 1px solid rgba(128, 128, 128, 0.302);
   /* border: 1px solid rgb(26, 8, 92); */
   background-color: rgba(141, 139, 139, 0.148);
+  cursor: pointer;
 }
 
 form .img-input label{
